ui: Increase z-index of main menus to avoid layering issues

--- a/ui/packages/consul-ui/app/components/main-header-horizontal/layout.scss
+++ b/ui/packages/consul-ui/app/components/main-header-horizontal/layout.scss
@@ -1,7 +1,7 @@
 %main-header-horizontal {
   display: flex;
   position: fixed;
-  z-index: 5;
+  z-index: 50;
   left: 0;
   padding: 0 25px;
   width: calc(100% - 50px);
